--- a/benchmarks/YCSB-C/Makefile
+++ b/benchmarks/YCSB-C/Makefile
@@ -1,9 +1,18 @@
 CC=g++
-CFLAGS=-std=c++11 -g -Wall -pthread -I./ $(INCLUDES)
-LDFLAGS= -lpthread -ltbb -lhiredis
-INCLUDES= -I/usr/include/hiredis
-SUBDIRS=core db
-SUBSRCS=$(wildcard core/*.cc) $(wildcard db/*.cc)
+CFLAGS=-std=c++11 -g -Wall  -I./
+# LDFLAGS= -lpthread -ltbb -lhiredis 
+# SUBDIRS=core db redis lib
+
+LDFLAGS= -ltbb
+SUBDIRS=core db lib
+
+GEM5_PATH =../../gem5
+TARGET_ISA = x86
+
+CFLAGS += -I$(GEM5_PATH)/include
+LDFLAGS += -L$(GEM5_PATH)/util/m5/build/$(TARGET_ISA)/out -lm5
+
+SUBSRCS=$(wildcard core/*.cc) $(wildcard db/*.cc) $(wildcard lib/*.cc)
 OBJECTS=$(SUBSRCS:.cc=.o)
 EXEC=ycsbc
 
