--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "CXLGen"]
 	path = CXLGen
-	url = git+ssh://git@github.com/Gingerbreadz/vCXLGen
+	url = https://github.com/Gingerbreadz/vCXLGen
